// parking-management/backend/prisma/schema.prisma
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id                String   @id @default(cuid())
  email             String   @unique
  password          String
  firstName         String
  lastName          String
  phone             String?
  role              Role     @default(USER)
  isEmailVerified   Boolean  @default(false)
  emailVerifiedAt   DateTime?
  lastLoginAt       DateTime?
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt
  
  bookings          Booking[]
  payments          Payment[]
  reviews           Review[]
  notifications     Notification[]
  
  @@map("users")
}

model ParkingSpot {
  id              String          @id @default(cuid())
  name            String
  address         String
  city            String
  state           String
  zipCode         String
  latitude        Float
  longitude       Float
  hourlyRate      Float
  rating          Float           @default(0)
  totalReviews    Int             @default(0)
  status          ParkingStatus   @default(AVAILABLE)
  features        Feature[]
  images          String[]
  description     String?
  ownerId         String?
  createdAt       DateTime        @default(now())
  updatedAt       DateTime        @updatedAt
  
  owner           User?           @relation(fields: [ownerId], references: [id])
  bookings        Booking[]
  reviews         Review[]
  availability    Availability[]
  
  @@map("parking_spots")
}

model Booking {
  id              String        @id @default(cuid())
  userId          String
  parkingId       String
  startTime       DateTime
  endTime         DateTime
  duration        Int
  totalPrice      Float
  status          BookingStatus @default(PENDING)
  cancellationReason String?
  checkInTime     DateTime?
  checkOutTime    DateTime?
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
  
  user            User          @relation(fields: [userId], references: [id])
  parkingSpot     ParkingSpot   @relation(fields: [parkingId], references: [id])
  payment         Payment?
  review          Review?
  
  @@index([userId])
  @@index([parkingId])
  @@index([status])
  @@map("bookings")
}

model Payment {
  id              String        @id @default(cuid())
  bookingId       String        @unique
  amount          Float
  currency        String        @default("USD")
  status          PaymentStatus @default(PENDING)
  paymentMethod   String
  stripePaymentId String?
  stripeIntentId  String?
  refundAmount    Float?
  refundReason    String?
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
  
  booking         Booking       @relation(fields: [bookingId], references: [id])
  
  @@map("payments")
}

model Review {
  id              String        @id @default(cuid())
  userId          String
  parkingId       String
  bookingId       String        @unique
  rating          Int
  comment         String?
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
  
  user            User          @relation(fields: [userId], references: [id])
  parkingSpot     ParkingSpot   @relation(fields: [parkingId], references: [id])
  booking         Booking       @relation(fields: [bookingId], references: [id])
  
  @@index([parkingId])
  @@map("reviews")
}

model Availability {
  id              String        @id @default(cuid())
  parkingId       String
  date            DateTime
  timeSlots       Json
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
  
  parkingSpot     ParkingSpot   @relation(fields: [parkingId], references: [id])
  
  @@unique([parkingId, date])
  @@map("availability")
}

model Notification {
  id              String        @id @default(cuid())
  userId          String
  type            NotificationType
  title           String
  message         String
  data            Json?
  read            Boolean       @default(false)
  readAt          DateTime?
  createdAt       DateTime      @default(now())
  
  user            User          @relation(fields: [userId], references: [id])
  
  @@index([userId])
  @@index([read])
  @@map("notifications")
}

enum Role {
  USER
  PARKING_OWNER
  ADMIN
  SUPER_ADMIN
}

enum ParkingStatus {
  AVAILABLE
  OCCUPIED
  RESERVED
  MAINTENANCE
  DISABLED
}

enum BookingStatus {
  PENDING
  CONFIRMED
  COMPLETED
  CANCELLED
  EXPIRED
}

enum PaymentStatus {
  PENDING
  PROCESSING
  COMPLETED
  FAILED
  REFUNDED
  CANCELLED
}

enum NotificationType {
  BOOKING_CONFIRMED
  BOOKING_CANCELLED
  BOOKING_REMINDER
  PAYMENT_SUCCESS
  PAYMENT_FAILED
  PARKING_UPDATE
  SYSTEM
}

enum Feature {
  ELECTRIC_CHARGING
  HANDICAP_ACCESSIBLE
  SECURE_CAMERA
  COVERED
  VALET
  CAR_WASH
  TIRE_INFLATION
  BATTERY_JUMP
  LUGGAGE_STORAGE
  SHUTTLE_SERVICE
}