@startuml

title Parking Management System - Class Diagram

class Location {
    +id: UUID
    +name: String
    +address: String
    +totalSlots: Integer
    +availableSlots: Integer
}

class ParkingSlot {
    +id: UUID
    +slotNumber: String
    +type: String
    +status: String
    +hourlyRate: Decimal
    +isAvailable(): Boolean
}

class Vehicle {
    +id: UUID
    +licensePlate: String
    +type: String
    +ownerId: UUID
}

class User {
    +id: UUID
    +email: String
    +name: String
    +role: String
}

class ParkingAssignment {
    +id: UUID
    +slotId: UUID
    +vehicleId: UUID
    +userId: UUID
    +checkInTime: DateTime
    +checkOutTime: DateTime
    +status: String
    +totalAmount: Decimal
}

class Payment {
    +id: UUID
    +assignmentId: UUID
    +amount: Decimal
    +status: String
    +method: String
}

' Relationships
Location "1" *-- "*" ParkingSlot
ParkingSlot "1" -- "*" ParkingAssignment
Vehicle "1" -- "*" ParkingAssignment
User "1" -- "*" ParkingAssignment
User "1" -- "*" Vehicle
ParkingAssignment "1" -- "1" Payment

@enduml